parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     empty -> <empty>
Rule 2     program -> PROGRAM identifier SEMICOLON variable_declaration_part procedure_or_function compound_statement DOT
Rule 3     block -> variable_declaration_part procedure_or_function compound_statement
Rule 4     variable_declaration_part -> empty
Rule 5     variable_declaration_part -> VAR variable_declaration_list
Rule 6     variable_declaration_list -> variable_declaration
Rule 7     variable_declaration_list -> variable_declaration variable_declaration_list
Rule 8     variable_declaration -> identifier COLON type SEMICOLON
Rule 9     type -> SINTEGER
Rule 10    type -> SCHAR
Rule 11    type -> SREAL
Rule 12    type -> SSTRING
Rule 13    type -> SBOOLEAN
Rule 14    procedure_or_function -> proc_or_func_declaration SEMICOLON procedure_or_function
Rule 15    procedure_or_function -> empty
Rule 16    proc_or_func_declaration -> procedure_declaration
Rule 17    proc_or_func_declaration -> function_declaration
Rule 18    function_declaration -> function_heading SEMICOLON block
Rule 19    function_heading -> FUNCTION identifier COLON type
Rule 20    function_heading -> FUNCTION identifier LPAREN parameters_list RPAREN COLON type
Rule 21    parameters_list -> parameter COMMA parameters_list
Rule 22    parameters_list -> parameter
Rule 23    parameter -> identifier COLON type
Rule 24    procedure_declaration -> procedure_heading SEMICOLON block
Rule 25    procedure_heading -> PROCEDURE identifier
Rule 26    procedure_heading -> PROCEDURE identifier LPAREN parameters_list RPAREN
Rule 27    compound_statement -> BEGIN statement_sequence END
Rule 28    statement_sequence -> statement SEMICOLON statement_sequence
Rule 29    statement_sequence -> statement SEMICOLON
Rule 30    statement -> compound_statement
Rule 31    statement -> assignment_statement
Rule 32    statement -> if_statement
Rule 33    statement -> while_statement
Rule 34    statement -> repeat_statement
Rule 35    statement -> for_statement
Rule 36    statement -> procedure_or_function_call
Rule 37    procedure_or_function_call -> identifier
Rule 38    procedure_or_function_call -> identifier LPAREN variables_list RPAREN
Rule 39    variables_list -> variables_list COMMA expression
Rule 40    variables_list -> expression
Rule 41    assignment_statement -> identifier ASSIGNMENT expression
Rule 42    if_statement -> IF expression THEN compound_statement
Rule 43    if_statement -> IF expression THEN compound_statement ELSE compound_statement
Rule 44    while_statement -> WHILE expression DO statement
Rule 45    repeat_statement -> REPEAT statement UNTIL expression
Rule 46    for_statement -> FOR assignment_statement TO expression DO statement
Rule 47    for_statement -> FOR assignment_statement DOWNTO expression DO statement
Rule 48    expression -> expression and_or expression_m
Rule 49    expression -> expression_m
Rule 50    expression_m -> element
Rule 51    expression_m -> expression_m sign element
Rule 52    and_or -> AND
Rule 53    and_or -> OR
Rule 54    sign -> PLUS
Rule 55    sign -> MINUS
Rule 56    sign -> INT_DIV
Rule 57    sign -> FLOAT_DIV
Rule 58    sign -> MULTIPLY
Rule 59    sign -> MOD
Rule 60    sign -> EQ
Rule 61    sign -> NEQ
Rule 62    sign -> LT
Rule 63    sign -> GT
Rule 64    sign -> LTE
Rule 65    sign -> GTE
Rule 66    element -> BOOLEAN
Rule 67    element -> NOT element
Rule 68    element -> identifier
Rule 69    element -> real
Rule 70    element -> integer
Rule 71    element -> char
Rule 72    element -> string
Rule 73    element -> LPAREN expression RPAREN
Rule 74    element -> function_call
Rule 75    element -> empty
Rule 76    function_call -> identifier LPAREN variables_list RPAREN
Rule 77    identifier -> IDENTIFIER
Rule 78    real -> REAL
Rule 79    integer -> INTEGER
Rule 80    string -> STRING
Rule 81    char -> CHAR

Terminals, with rules where they appear

AND                  : 52
ASSIGNMENT           : 41
BEGIN                : 27
BOOLEAN              : 66
CHAR                 : 81
COLON                : 8 19 20 23
COMMA                : 21 39
DO                   : 44 46 47
DOT                  : 2
DOWNTO               : 47
ELSE                 : 43
END                  : 27
EQ                   : 60
FLOAT_DIV            : 57
FOR                  : 46 47
FUNCTION             : 19 20
GT                   : 63
GTE                  : 65
IDENTIFIER           : 77
IF                   : 42 43
INTEGER              : 79
INT_DIV              : 56
LPAREN               : 20 26 38 73 76
LT                   : 62
LTE                  : 64
MINUS                : 55
MOD                  : 59
MULTIPLY             : 58
NEQ                  : 61
NOT                  : 67
OR                   : 53
PLUS                 : 54
PROCEDURE            : 25 26
PROGRAM              : 2
REAL                 : 78
REPEAT               : 45
RPAREN               : 20 26 38 73 76
SBOOLEAN             : 13
SCHAR                : 10
SEMICOLON            : 2 8 14 18 24 28 29
SINTEGER             : 9
SREAL                : 11
SSTRING              : 12
STRING               : 80
THEN                 : 42 43
TO                   : 46
UNTIL                : 45
VAR                  : 5
WHILE                : 44
error                : 

Nonterminals, with rules where they appear

and_or               : 48
assignment_statement : 31 46 47
block                : 18 24
char                 : 71
compound_statement   : 2 3 30 42 43 43
element              : 50 51 67
empty                : 4 15 75
expression           : 39 40 41 42 43 44 45 46 47 48 73
expression_m         : 48 49 51
for_statement        : 35
function_call        : 74
function_declaration : 17
function_heading     : 18
identifier           : 2 8 19 20 23 25 26 37 38 41 68 76
if_statement         : 32
integer              : 70
parameter            : 21 22
parameters_list      : 20 21 26
proc_or_func_declaration : 14
procedure_declaration : 16
procedure_heading    : 24
procedure_or_function : 2 3 14
procedure_or_function_call : 36
program              : 0
real                 : 69
repeat_statement     : 34
sign                 : 51
statement            : 28 29 44 45 46 47
statement_sequence   : 27 28
string               : 72
type                 : 8 19 20 23
variable_declaration : 6 7
variable_declaration_list : 5 7
variable_declaration_part : 2 3
variables_list       : 38 39 76
while_statement      : 33

Parsing method: LALR

state 0

    (0) S' -> . program
    (2) program -> . PROGRAM identifier SEMICOLON variable_declaration_part procedure_or_function compound_statement DOT

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (2) program -> PROGRAM . identifier SEMICOLON variable_declaration_part procedure_or_function compound_statement DOT
    (77) identifier -> . IDENTIFIER

    IDENTIFIER      shift and go to state 4

    identifier                     shift and go to state 3

state 3

    (2) program -> PROGRAM identifier . SEMICOLON variable_declaration_part procedure_or_function compound_statement DOT

    SEMICOLON       shift and go to state 5


state 4

    (77) identifier -> IDENTIFIER .

    SEMICOLON       reduce using rule 77 (identifier -> IDENTIFIER .)
    COLON           reduce using rule 77 (identifier -> IDENTIFIER .)
    LPAREN          reduce using rule 77 (identifier -> IDENTIFIER .)
    ASSIGNMENT      reduce using rule 77 (identifier -> IDENTIFIER .)
    PLUS            reduce using rule 77 (identifier -> IDENTIFIER .)
    MINUS           reduce using rule 77 (identifier -> IDENTIFIER .)
    INT_DIV         reduce using rule 77 (identifier -> IDENTIFIER .)
    FLOAT_DIV       reduce using rule 77 (identifier -> IDENTIFIER .)
    MULTIPLY        reduce using rule 77 (identifier -> IDENTIFIER .)
    MOD             reduce using rule 77 (identifier -> IDENTIFIER .)
    EQ              reduce using rule 77 (identifier -> IDENTIFIER .)
    NEQ             reduce using rule 77 (identifier -> IDENTIFIER .)
    LT              reduce using rule 77 (identifier -> IDENTIFIER .)
    GT              reduce using rule 77 (identifier -> IDENTIFIER .)
    LTE             reduce using rule 77 (identifier -> IDENTIFIER .)
    GTE             reduce using rule 77 (identifier -> IDENTIFIER .)
    THEN            reduce using rule 77 (identifier -> IDENTIFIER .)
    AND             reduce using rule 77 (identifier -> IDENTIFIER .)
    OR              reduce using rule 77 (identifier -> IDENTIFIER .)
    DO              reduce using rule 77 (identifier -> IDENTIFIER .)
    UNTIL           reduce using rule 77 (identifier -> IDENTIFIER .)
    TO              reduce using rule 77 (identifier -> IDENTIFIER .)
    DOWNTO          reduce using rule 77 (identifier -> IDENTIFIER .)
    RPAREN          reduce using rule 77 (identifier -> IDENTIFIER .)
    COMMA           reduce using rule 77 (identifier -> IDENTIFIER .)


state 5

    (2) program -> PROGRAM identifier SEMICOLON . variable_declaration_part procedure_or_function compound_statement DOT
    (4) variable_declaration_part -> . empty
    (5) variable_declaration_part -> . VAR variable_declaration_list
    (1) empty -> .

    VAR             shift and go to state 8
    PROCEDURE       reduce using rule 1 (empty -> .)
    FUNCTION        reduce using rule 1 (empty -> .)
    BEGIN           reduce using rule 1 (empty -> .)

    variable_declaration_part      shift and go to state 6
    empty                          shift and go to state 7

state 6

    (2) program -> PROGRAM identifier SEMICOLON variable_declaration_part . procedure_or_function compound_statement DOT
    (14) procedure_or_function -> . proc_or_func_declaration SEMICOLON procedure_or_function
    (15) procedure_or_function -> . empty
    (16) proc_or_func_declaration -> . procedure_declaration
    (17) proc_or_func_declaration -> . function_declaration
    (1) empty -> .
    (24) procedure_declaration -> . procedure_heading SEMICOLON block
    (18) function_declaration -> . function_heading SEMICOLON block
    (25) procedure_heading -> . PROCEDURE identifier
    (26) procedure_heading -> . PROCEDURE identifier LPAREN parameters_list RPAREN
    (19) function_heading -> . FUNCTION identifier COLON type
    (20) function_heading -> . FUNCTION identifier LPAREN parameters_list RPAREN COLON type

    BEGIN           reduce using rule 1 (empty -> .)
    PROCEDURE       shift and go to state 16
    FUNCTION        shift and go to state 17

    procedure_or_function          shift and go to state 9
    proc_or_func_declaration       shift and go to state 10
    empty                          shift and go to state 11
    procedure_declaration          shift and go to state 12
    function_declaration           shift and go to state 13
    procedure_heading              shift and go to state 14
    function_heading               shift and go to state 15

state 7

    (4) variable_declaration_part -> empty .

    PROCEDURE       reduce using rule 4 (variable_declaration_part -> empty .)
    FUNCTION        reduce using rule 4 (variable_declaration_part -> empty .)
    BEGIN           reduce using rule 4 (variable_declaration_part -> empty .)


state 8

    (5) variable_declaration_part -> VAR . variable_declaration_list
    (6) variable_declaration_list -> . variable_declaration
    (7) variable_declaration_list -> . variable_declaration variable_declaration_list
    (8) variable_declaration -> . identifier COLON type SEMICOLON
    (77) identifier -> . IDENTIFIER

    IDENTIFIER      shift and go to state 4

    variable_declaration_list      shift and go to state 18
    variable_declaration           shift and go to state 19
    identifier                     shift and go to state 20

state 9

    (2) program -> PROGRAM identifier SEMICOLON variable_declaration_part procedure_or_function . compound_statement DOT
    (27) compound_statement -> . BEGIN statement_sequence END

    BEGIN           shift and go to state 22

    compound_statement             shift and go to state 21

state 10

    (14) procedure_or_function -> proc_or_func_declaration . SEMICOLON procedure_or_function

    SEMICOLON       shift and go to state 23


state 11

    (15) procedure_or_function -> empty .

    BEGIN           reduce using rule 15 (procedure_or_function -> empty .)


state 12

    (16) proc_or_func_declaration -> procedure_declaration .

    SEMICOLON       reduce using rule 16 (proc_or_func_declaration -> procedure_declaration .)


state 13

    (17) proc_or_func_declaration -> function_declaration .

    SEMICOLON       reduce using rule 17 (proc_or_func_declaration -> function_declaration .)


state 14

    (24) procedure_declaration -> procedure_heading . SEMICOLON block

    SEMICOLON       shift and go to state 24


state 15

    (18) function_declaration -> function_heading . SEMICOLON block

    SEMICOLON       shift and go to state 25


state 16

    (25) procedure_heading -> PROCEDURE . identifier
    (26) procedure_heading -> PROCEDURE . identifier LPAREN parameters_list RPAREN
    (77) identifier -> . IDENTIFIER

    IDENTIFIER      shift and go to state 4

    identifier                     shift and go to state 26

state 17

    (19) function_heading -> FUNCTION . identifier COLON type
    (20) function_heading -> FUNCTION . identifier LPAREN parameters_list RPAREN COLON type
    (77) identifier -> . IDENTIFIER

    IDENTIFIER      shift and go to state 4

    identifier                     shift and go to state 27

state 18

    (5) variable_declaration_part -> VAR variable_declaration_list .

    PROCEDURE       reduce using rule 5 (variable_declaration_part -> VAR variable_declaration_list .)
    FUNCTION        reduce using rule 5 (variable_declaration_part -> VAR variable_declaration_list .)
    BEGIN           reduce using rule 5 (variable_declaration_part -> VAR variable_declaration_list .)


state 19

    (6) variable_declaration_list -> variable_declaration .
    (7) variable_declaration_list -> variable_declaration . variable_declaration_list
    (6) variable_declaration_list -> . variable_declaration
    (7) variable_declaration_list -> . variable_declaration variable_declaration_list
    (8) variable_declaration -> . identifier COLON type SEMICOLON
    (77) identifier -> . IDENTIFIER

    PROCEDURE       reduce using rule 6 (variable_declaration_list -> variable_declaration .)
    FUNCTION        reduce using rule 6 (variable_declaration_list -> variable_declaration .)
    BEGIN           reduce using rule 6 (variable_declaration_list -> variable_declaration .)
    IDENTIFIER      shift and go to state 4

    variable_declaration           shift and go to state 19
    variable_declaration_list      shift and go to state 28
    identifier                     shift and go to state 20

state 20

    (8) variable_declaration -> identifier . COLON type SEMICOLON

    COLON           shift and go to state 29


state 21

    (2) program -> PROGRAM identifier SEMICOLON variable_declaration_part procedure_or_function compound_statement . DOT

    DOT             shift and go to state 30


state 22

    (27) compound_statement -> BEGIN . statement_sequence END
    (28) statement_sequence -> . statement SEMICOLON statement_sequence
    (29) statement_sequence -> . statement SEMICOLON
    (30) statement -> . compound_statement
    (31) statement -> . assignment_statement
    (32) statement -> . if_statement
    (33) statement -> . while_statement
    (34) statement -> . repeat_statement
    (35) statement -> . for_statement
    (36) statement -> . procedure_or_function_call
    (27) compound_statement -> . BEGIN statement_sequence END
    (41) assignment_statement -> . identifier ASSIGNMENT expression
    (42) if_statement -> . IF expression THEN compound_statement
    (43) if_statement -> . IF expression THEN compound_statement ELSE compound_statement
    (44) while_statement -> . WHILE expression DO statement
    (45) repeat_statement -> . REPEAT statement UNTIL expression
    (46) for_statement -> . FOR assignment_statement TO expression DO statement
    (47) for_statement -> . FOR assignment_statement DOWNTO expression DO statement
    (37) procedure_or_function_call -> . identifier
    (38) procedure_or_function_call -> . identifier LPAREN variables_list RPAREN
    (77) identifier -> . IDENTIFIER

    BEGIN           shift and go to state 22
    IF              shift and go to state 41
    WHILE           shift and go to state 42
    REPEAT          shift and go to state 43
    FOR             shift and go to state 44
    IDENTIFIER      shift and go to state 4

    statement_sequence             shift and go to state 31
    statement                      shift and go to state 32
    compound_statement             shift and go to state 33
    assignment_statement           shift and go to state 34
    if_statement                   shift and go to state 35
    while_statement                shift and go to state 36
    repeat_statement               shift and go to state 37
    for_statement                  shift and go to state 38
    procedure_or_function_call     shift and go to state 39
    identifier                     shift and go to state 40

state 23

    (14) procedure_or_function -> proc_or_func_declaration SEMICOLON . procedure_or_function
    (14) procedure_or_function -> . proc_or_func_declaration SEMICOLON procedure_or_function
    (15) procedure_or_function -> . empty
    (16) proc_or_func_declaration -> . procedure_declaration
    (17) proc_or_func_declaration -> . function_declaration
    (1) empty -> .
    (24) procedure_declaration -> . procedure_heading SEMICOLON block
    (18) function_declaration -> . function_heading SEMICOLON block
    (25) procedure_heading -> . PROCEDURE identifier
    (26) procedure_heading -> . PROCEDURE identifier LPAREN parameters_list RPAREN
    (19) function_heading -> . FUNCTION identifier COLON type
    (20) function_heading -> . FUNCTION identifier LPAREN parameters_list RPAREN COLON type

    BEGIN           reduce using rule 1 (empty -> .)
    PROCEDURE       shift and go to state 16
    FUNCTION        shift and go to state 17

    proc_or_func_declaration       shift and go to state 10
    procedure_or_function          shift and go to state 45
    empty                          shift and go to state 11
    procedure_declaration          shift and go to state 12
    function_declaration           shift and go to state 13
    procedure_heading              shift and go to state 14
    function_heading               shift and go to state 15

state 24

    (24) procedure_declaration -> procedure_heading SEMICOLON . block
    (3) block -> . variable_declaration_part procedure_or_function compound_statement
    (4) variable_declaration_part -> . empty
    (5) variable_declaration_part -> . VAR variable_declaration_list
    (1) empty -> .

    VAR             shift and go to state 8
    PROCEDURE       reduce using rule 1 (empty -> .)
    FUNCTION        reduce using rule 1 (empty -> .)
    BEGIN           reduce using rule 1 (empty -> .)

    block                          shift and go to state 46
    variable_declaration_part      shift and go to state 47
    empty                          shift and go to state 7

state 25

    (18) function_declaration -> function_heading SEMICOLON . block
    (3) block -> . variable_declaration_part procedure_or_function compound_statement
    (4) variable_declaration_part -> . empty
    (5) variable_declaration_part -> . VAR variable_declaration_list
    (1) empty -> .

    VAR             shift and go to state 8
    PROCEDURE       reduce using rule 1 (empty -> .)
    FUNCTION        reduce using rule 1 (empty -> .)
    BEGIN           reduce using rule 1 (empty -> .)

    block                          shift and go to state 48
    variable_declaration_part      shift and go to state 47
    empty                          shift and go to state 7

state 26

    (25) procedure_heading -> PROCEDURE identifier .
    (26) procedure_heading -> PROCEDURE identifier . LPAREN parameters_list RPAREN

    SEMICOLON       reduce using rule 25 (procedure_heading -> PROCEDURE identifier .)
    LPAREN          shift and go to state 49


state 27

    (19) function_heading -> FUNCTION identifier . COLON type
    (20) function_heading -> FUNCTION identifier . LPAREN parameters_list RPAREN COLON type

    COLON           shift and go to state 50
    LPAREN          shift and go to state 51


state 28

    (7) variable_declaration_list -> variable_declaration variable_declaration_list .

    PROCEDURE       reduce using rule 7 (variable_declaration_list -> variable_declaration variable_declaration_list .)
    FUNCTION        reduce using rule 7 (variable_declaration_list -> variable_declaration variable_declaration_list .)
    BEGIN           reduce using rule 7 (variable_declaration_list -> variable_declaration variable_declaration_list .)


state 29

    (8) variable_declaration -> identifier COLON . type SEMICOLON
    (9) type -> . SINTEGER
    (10) type -> . SCHAR
    (11) type -> . SREAL
    (12) type -> . SSTRING
    (13) type -> . SBOOLEAN

    SINTEGER        shift and go to state 53
    SCHAR           shift and go to state 54
    SREAL           shift and go to state 55
    SSTRING         shift and go to state 56
    SBOOLEAN        shift and go to state 57

    type                           shift and go to state 52

state 30

    (2) program -> PROGRAM identifier SEMICOLON variable_declaration_part procedure_or_function compound_statement DOT .

    $end            reduce using rule 2 (program -> PROGRAM identifier SEMICOLON variable_declaration_part procedure_or_function compound_statement DOT .)


state 31

    (27) compound_statement -> BEGIN statement_sequence . END

    END             shift and go to state 58


state 32

    (28) statement_sequence -> statement . SEMICOLON statement_sequence
    (29) statement_sequence -> statement . SEMICOLON

    SEMICOLON       shift and go to state 59


state 33

    (30) statement -> compound_statement .

    SEMICOLON       reduce using rule 30 (statement -> compound_statement .)
    UNTIL           reduce using rule 30 (statement -> compound_statement .)


state 34

    (31) statement -> assignment_statement .

    SEMICOLON       reduce using rule 31 (statement -> assignment_statement .)
    UNTIL           reduce using rule 31 (statement -> assignment_statement .)


state 35

    (32) statement -> if_statement .

    SEMICOLON       reduce using rule 32 (statement -> if_statement .)
    UNTIL           reduce using rule 32 (statement -> if_statement .)


state 36

    (33) statement -> while_statement .

    SEMICOLON       reduce using rule 33 (statement -> while_statement .)
    UNTIL           reduce using rule 33 (statement -> while_statement .)


state 37

    (34) statement -> repeat_statement .

    SEMICOLON       reduce using rule 34 (statement -> repeat_statement .)
    UNTIL           reduce using rule 34 (statement -> repeat_statement .)


state 38

    (35) statement -> for_statement .

    SEMICOLON       reduce using rule 35 (statement -> for_statement .)
    UNTIL           reduce using rule 35 (statement -> for_statement .)


state 39

    (36) statement -> procedure_or_function_call .

    SEMICOLON       reduce using rule 36 (statement -> procedure_or_function_call .)
    UNTIL           reduce using rule 36 (statement -> procedure_or_function_call .)


state 40

    (41) assignment_statement -> identifier . ASSIGNMENT expression
    (37) procedure_or_function_call -> identifier .
    (38) procedure_or_function_call -> identifier . LPAREN variables_list RPAREN

    ASSIGNMENT      shift and go to state 60
    SEMICOLON       reduce using rule 37 (procedure_or_function_call -> identifier .)
    UNTIL           reduce using rule 37 (procedure_or_function_call -> identifier .)
    LPAREN          shift and go to state 61


state 41

    (42) if_statement -> IF . expression THEN compound_statement
    (43) if_statement -> IF . expression THEN compound_statement ELSE compound_statement
    (48) expression -> . expression and_or expression_m
    (49) expression -> . expression_m
    (50) expression_m -> . element
    (51) expression_m -> . expression_m sign element
    (66) element -> . BOOLEAN
    (67) element -> . NOT element
    (68) element -> . identifier
    (69) element -> . real
    (70) element -> . integer
    (71) element -> . char
    (72) element -> . string
    (73) element -> . LPAREN expression RPAREN
    (74) element -> . function_call
    (75) element -> . empty
    (77) identifier -> . IDENTIFIER
    (78) real -> . REAL
    (79) integer -> . INTEGER
    (81) char -> . CHAR
    (80) string -> . STRING
    (76) function_call -> . identifier LPAREN variables_list RPAREN
    (1) empty -> .

    BOOLEAN         shift and go to state 65
    NOT             shift and go to state 66
    LPAREN          shift and go to state 72
    IDENTIFIER      shift and go to state 4
    REAL            shift and go to state 75
    INTEGER         shift and go to state 76
    CHAR            shift and go to state 77
    STRING          shift and go to state 78
    PLUS            reduce using rule 1 (empty -> .)
    MINUS           reduce using rule 1 (empty -> .)
    INT_DIV         reduce using rule 1 (empty -> .)
    FLOAT_DIV       reduce using rule 1 (empty -> .)
    MULTIPLY        reduce using rule 1 (empty -> .)
    MOD             reduce using rule 1 (empty -> .)
    EQ              reduce using rule 1 (empty -> .)
    NEQ             reduce using rule 1 (empty -> .)
    LT              reduce using rule 1 (empty -> .)
    GT              reduce using rule 1 (empty -> .)
    LTE             reduce using rule 1 (empty -> .)
    GTE             reduce using rule 1 (empty -> .)
    THEN            reduce using rule 1 (empty -> .)
    AND             reduce using rule 1 (empty -> .)
    OR              reduce using rule 1 (empty -> .)

    expression                     shift and go to state 62
    expression_m                   shift and go to state 63
    element                        shift and go to state 64
    identifier                     shift and go to state 67
    real                           shift and go to state 68
    integer                        shift and go to state 69
    char                           shift and go to state 70
    string                         shift and go to state 71
    function_call                  shift and go to state 73
    empty                          shift and go to state 74

state 42
